--- a/projects.html
+++ b/projects.html
@@ -80,6 +80,15 @@
                 </div>
             </div>
 
+            <div class="uk-container uk-secondary uk-width-1-3 uk-margin-xlarge-top">
+                <a href="https://github.com/zhaojustin" class="uk-display-block uk-card uk-card-body uk-card-hover uk-card-primary uk-link-toggle">
+                    <h3 class="uk-card-title"><span uk-icon="github"></span> Github</h3>
+                    <p>You can find all my projects on my Github page!</p>
+                </a>
+            </div>
+
+
+
             <!-- Socials -->
             <div class="uk-container uk-width-1-2 uk-margin-xlarge-top">
                 <div class="uk-flex-middle" uk-grid>
