added lazy loading to photos

--- a/photography.html
+++ b/photography.html
@@ -72,87 +72,87 @@
                             <div class="uk-grid-small uk-child-width-1-3@m" uk-grid="masonry:true">
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2020-2-rileygumbo.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2020-2-valentines.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2020-1-darrenla.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2021-5-sarahjustinmirror.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2019-8-626sarah.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2020-11-wenxihighline.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2020-1-rileyla.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2020-1-ryanportrait.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2020-1-ryanriley.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2019-8-626alice.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2020-1-ryanrileychair.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2020-1-charissa.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2020-2-derekportrait.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2020-1-jessica.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2020-3-sarahgriffith.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2021-5-sarahflowers.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2021-5-sarahla.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2021-5-sarahsunflower.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2021-5-rachelbday.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2021-5-sunflowerfield.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/friends/2021-5-sarahlapeace.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                             </div>
                         </div>
@@ -164,99 +164,99 @@
                             <div class="uk-grid-small uk-child-width-1-3@m" uk-grid="masonry:true">
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-aritzia.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-chinatownnight1.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-chinatownnight2.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-chinatownnight3.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-flower.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-governors.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-governors2.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-governorsboat.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-governorshair.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-governorsshoes.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-lantern.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-nycmade.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-pumpkins.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-soho1.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-soho2.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-sohogirl.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-10-taiwaneseflag.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-11-empirestate.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-12-dorm.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-9-wenxibridge.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2020-9-wenxisquat.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2021-2-rooseveltisland.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2021-4-chinatownday.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/nyc/2021-5-gummies.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
 
                             </div>
@@ -269,15 +269,15 @@
                             <div class="uk-grid-small uk-child-width-1-3@m" uk-grid="masonry:true">
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/la/2021-5-la.jpg" width="400"
-                                        height="300" alt="" uk-img />
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/la/2020-12-thesource.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/la/2021-5-littletokyo.jpg"
-                                        width="400" height="300" alt="" uk-img />
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                             </div>
                         </div>
